--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "noCheck": false
   },
   "include": [
     "src/**/*"
